--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,17 +1,159 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: #121212;
+  color: #fff;
 }
 
-a {
-  color: #00B7FF;
+.header {
+  text-align: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+  padding: 1rem 0;
+  margin: 0;
+  background-color: #242424;
+
 }
 
 .usercontent {
-  padding-bottom: 2rem;
+  /* border: solid; */
+  padding: 2rem;
+  margin-bottom: 2rem;
+  box-shadow: 4px 4px #eee;
+  transition: 0.4s;
+  background-color: #333;
+  word-wrap: break-word;
 }
 
+.usercontent:hover {
+  background-color: #424242;
+}
+
+
+.contentinputs {
+  /* border: solid; */
+  padding: 2rem;
+  margin-bottom: 2rem;
+  box-shadow: 4px 4px #eee;
+  transition: 0.4s;
+  background-color: #333;
+  word-wrap: break-word;
+}
 .container {
+  margin: 6rem auto;
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.messagetext {
+  font-size: 1rem;
+}
+
+.datetext {
+  font-size: 0.7rem;
+  float: right;
+}
+
+.button {
+  margin: auto;
+  text-align: center;
+  background-color: #2196f3;
+  width: 8rem;
+  text-decoration: none;
+  color: #fff;
+  padding: 1rem;
+  transition: 0.4s;
+
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+}
+
+.button2 {
+  margin: auto;
+  text-align: center;
+  background-color: #2196f3;
+  width: 6rem;
+  text-decoration: none;
+  color: #fff;
+  padding: 1rem;
+  transition: 0.4s;
+
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+}
+
+
+.button:hover {
+  background-color: #4dabf5;
+}
+
+.fa-pencil {
+  font-size: 1rem;
+  float: right;
+}
+
+.fa {
+  font-size: 1rem;
+  float: right;
+}
+
+form {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  border: none;
+  outline: none;
+  height: 1.5rem;
+  border-bottom: solid #eee;
+  color: #fff;
+  margin-bottom: 1rem;
+  background-color: #333;
+}
+
+textarea {
+  border: none;
+  border-bottom: solid #eee;
+  color: #fff;
+  margin-bottom: 1rem;
+  background-color: #333;
+  resize: none;
+  outline: none;
+  height: 8rem;
+}
+
+button {
+  padding: 1rem;
+  width: 8rem;
+  margin: auto;
+  background-color: #2196f3;
+  color: #fff;
+  border: none;
+}
+
+button:hover {
+  background-color: #4dabf5;
+}
+
+.buttonsDiv {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 450px) {
+  .buttonsDiv {
+    display: flex;
+    flex-direction: column-reverse;
+    align-content: space-between;
+    height: 150px;
+  }
 }
