--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title= title
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
   body
     block content
