--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,9 +69,9 @@ body {
   padding: 1rem;
   transition: 0.4s;
 
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .button2 {
@@ -84,9 +84,9 @@ body {
   padding: 1rem;
   transition: 0.4s;
 
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 
@@ -143,9 +143,9 @@ button {
   color: #fff;
   border: none;
 
-  -webkit-appearance: button;
-  -moz-appearance: button;
-  appearance: button;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 button:hover {
